   -  listing: when segment directive created a list entry, the offset size
      may have been wrong.
   -  omf format: externdef may have caused a PUBDEF record to be written
      in pass 2, resulting in an invalid object module.
   -  invoke directive: if cpu was 8086, and the argument was a constant 0,
      a wrong value may have been pushed; see invoke56.asm.

   Other changes:
   -  output format -djgpp: support added for 16-bit offset fixups.
   -  in listings, for directives, offset of 16-bit segments displayed with
      width 4.
   -  OWDOS32.mak added. Creates a 32-bit version that uses the native Open
      Watcom runtime for extended DOS. Open Watcom 2.0 is recommended to
      create this variant.

   25.03.2023, v2.17:

   Bugfixes:
   -  option renamekeyword: if the keyword was renamed multiple times it
      did work only if the first occurance of this option was after an
      instruction or directive that triggered "fastpass"; see renkeyw.asm.
   -  option renamekeyword: keywords weren't restored to their default at
      end of pass; see renkeyw2.asm.
   -  option renamekeyword: renaming an already renamed keyword may have
      caused an infinite loop; see renkeyw3.asm.
   -  size operand of DUP operator was checked to be positive, but wasn't
      checked for 32-bit overflow; see constnt3.asm.
   -  direct memory access with flat override ( for constant addresses )
      may have generated error "cannot access label through segment registers";
      see flatgrp3.asm.
   -  regression in v2.16: invoke may have generated a "PUSHD" in 64-bit code
      if .model wasn't flat; see invoke54.asm.
   -  FLAT: override may have suppressed address size prefix; see
      flatgrp4.asm.
   -  invoke, 64-bit, non-win64, vararg: 32-bit registers were rejected as
      arguments; see invoke55.asm.
   -  display of assembly-time was correct only if CLOCKS_PER_SEC was 1000.
   -  listing of embedded structs/unions: the printed start offset was wrong